<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExampleActivity1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/selectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectBtn" />

            <Button
                android:id="@+id/splinesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splinesBtn" />

            <Button
                android:id="@+id/lineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lineBtn" />

            <Button
                android:id="@+id/redPen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redPen" />

            <Button
                android:id="@+id/bluePen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluePen" />

            <Button
                android:id="@+id/lineStyleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lineStyleBtn" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveBtn" />

            <Button
                android:id="@+id/loadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadBtn" />

            <Button
                android:id="@+id/addSVGFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addSVGFile" />

            <Button
                android:id="@+id/undoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undoBtn" />

            <Button
                android:id="@+id/redoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redoBtn" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
